cambios en la presentacion de datos del viaje

--- a/public/fw7/assets/css/app.css
+++ b/public/fw7/assets/css/app.css
@@ -6151,3 +6151,9 @@ html:not(.watch-active-state) .list-block .item-link:active {
     50% { opacity: 0.5; }
     100% { opacity: 1.0; }
 }
+.iconfloat{
+	float: right;
+    top: -55px;
+    position: relative;
+    font-size: 2em;
+}
