--- a/public/components/bootstrap-datepicker/less/datepicker.less
+++ b/public/components/bootstrap-datepicker/less/datepicker.less
@@ -106,7 +106,7 @@
 			color: #000;
 		}
 		&.today:hover:hover { // Thank bootstrap 2.0 for this selector...
-			// TODO: Bump min BS to 2.1, use @textColor in buttonBackground above
+			// TO_DO Bump min BS to 2.1, use @textColor in buttonBackground above
 			color: #000;
 		}
 		&.today.active:hover {
